--- a/web/package.json
+++ b/web/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vditor": "^3.3.10",
+    "qrcode": "^1.4.4",
+    "vditor": "^3.4.5",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.3",
-    "vue-router": "^3.2.0",
-    "vuetify": "^2.2.11",
+    "vue-router": "^3.4.2",
+    "vuetify": "^2.3.8",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
