--- a/Share/src/main/resources/application.yml
+++ b/Share/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 
+# spring:
+#   datasource:
+#     driver-class-name: com.mysql.cj.jdbc.Driver
+#     url: jdbc:mysql://192.168.0.100:3306/LAN_share?useUnicode=true&characterEncoding=UTF-8
+#     username: root
+#     password: pzw123456
 spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.0.100:3306/LAN_share?useUnicode=true&characterEncoding=UTF-8
-    username: root
-    password: pzw123456
-#spring:
-#  datasource:
-#    url: jdbc:h2:~/share
-#    driver-class-name: org.h2.Driver
-#    username: sa
-#    password: 123456
+ datasource:
+   url: jdbc:h2:~/share
+   driver-class-name: org.h2.Driver
+   username: sa
+   password: 123456
   # h2:
   #   console:
   #     settings:
