--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.1",
+    "crypto-js": "^4.1.1",
     "qrcode": "^1.4.4",
     "vditor": "^3.8.5",
     "vue": "^2.6.12",
