--- a/Share/src/main/resources/application.yml
+++ b/Share/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   datasource:
     url: jdbc:h2:~/share;NON_KEYWORDS=KEY
     driver-class-name: org.h2.Driver
-    username: sa
-    password: 123456
+    username: puzhiwei
+    password: pzw123456
   h2:
     console:
       settings:
