--- a/Share/pom.xml
+++ b/Share/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.buguagaoshu</groupId>
     <artifactId>share</artifactId>
-    <version>3.1.0</version>
+    <version>3.1.2</version>
     <name>share</name>
     <description>局域网文本共享服务</description>
 
@@ -32,6 +32,11 @@
 <!--            <artifactId>mysql-connector-java</artifactId>-->
 <!--            <scope>runtime</scope>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.lionsoul</groupId>
+            <artifactId>ip2region</artifactId>
+            <version>2.7.0</version>
+        </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -79,6 +84,8 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+
+
             </plugin>
         </plugins>
     </build>
