--- a/.github/workflows/graalvm-native-build.yml
+++ b/.github/workflows/graalvm-native-build.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           # ===== 按需替换为你的项目构建命令 =====
           # Maven (Quarkus/Spring Native)
-          ./mvn -Pnative native:compile -DskipTests -Djava.version=25
+          mvn -Pnative native:compile -DskipTests -Djava.version=25
           # Gradle (示例)
           # ./gradlew nativeCompile -PjavaVersion=25
           # 纯 Java 项目（手动调用 native-image）
@@ -66,7 +66,7 @@ jobs:
           
           # ===== 按需替换为你的项目构建命令 =====
           # Maven (Quarkus/Spring Native)
-          ./mvn -Pnative native:compile -DskipTests -Djava.version=25 -Dquarkus.native.target-arch=arm64
+          mvn -Pnative native:compile -DskipTests -Djava.version=25 -Dquarkus.native.target-arch=arm64
           # Gradle (示例)
           # ./gradlew nativeCompile -PjavaVersion=25 -Pquarkus.native.target-arch=arm64
           # 纯 Java 项目（手动调用 native-image）
